link bug cleared

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
     <div >
         <ul>
             <li><img src="./images/logo.png" alt="Logo"></li>
-            <li><a href="https://github.com/idevmou/SimpleSave">Github</a></li>
+            <li><a href="https://github.com/idevmou/SimpleSave-V2.0" target="_blank">Github</a></li>
             <li class="no-style"><a href="#contact">Note taken Instantly</a></li>
-            <li style="float:right"><a class="active" href="https://idevmou.github.io/SimpleSave/">Docs</a></li>
+            <li style="float:right"><a class="active" href="https://github.com/idevmou/SimpleSave-V2.0" target="_blank">Docs</a></li>
           </ul>
     </div>
     <div class="notes" id="app">
