--- a/index.html
+++ b/index.html
@@ -47,3 +47,9 @@
     </div>
 </body>
 </html>
+
+<!--   "icons" : {
+        "16" : "./images/16img.png",
+        "32" : "./images/32img.png",
+        "128" : "./images/128img.png"
+    }, -->
